# MoonCrust

./: .gitignore  .gitmodules  CMakeLists.txt  GAMEPLAN.md  LICENSE  README.md  check_mesh.lua  def_light.vert.spv  def_line.vert.spv  def_point.vert.spv  grid.vert.spv  imgui.ini  line.vert.spv  parser.comp.spv  plot.vert.spv  point.vert.spv  test.comp  test_enums.lua  text.vert.spv  ui.vert.spv  vinfo.txt
.github/workflows/: build.yml
examples/01_hello_gpu/: main.lua
examples/02_compute_basic/: add.comp  main.lua
examples/04_particles_1m/: main.lua  particles.comp
examples/05_clear_screen/: main.lua
examples/06_particles_visual/: main.lua  physics.comp  render.frag  render.vert
examples/07_interactive_particles/: main.lua  physics.comp  render.frag  render.vert
examples/08_slime_mold/: agent.comp  diffuse.comp  main.lua  render.frag  render.vert
examples/09_fluid_sph/: density.comp  force.comp  hash.comp  main.lua  render.frag  render.vert  sort.comp
examples/10_moo_graph_search/: edge.vert  graph.frag  graph.vert  main.lua  pareto.vert  search.comp
examples/11_grass_mesh_shader/: grass.mesh  main.lua
examples/12_path_tracer/: main.lua  path_trace.comp  render.frag  render.vert
examples/13_graph_visualizer/: main.lua  text.frag  text.vert  vis.frag  vis.vert
examples/14_moo_graph_search_reward3d/: edge.frag  edge.vert  graph.vert  main.lua  pareto.vert  pareto_mesh.frag  pareto_mesh.vert  search.comp
examples/15_wavefront_rrt_dubins3d/: edge.frag  edge.vert  expand.comp  graph.frag  graph.vert  main.lua  solution.frag  solution.vert
examples/16_hybrid_astar/: draw.vert  expand.comp  main.lua  math.lua  point.frag
examples/17_mppi_gpu/: draw.vert  line.frag  main.lua  mppi.comp  plane.frag  plane.vert  point.frag
examples/18_voronoi_sdf_graph/: draw.vert  main.lua
examples/19_octree_astar/: main.lua  point.frag
examples/20_gpu_culling/: cull.comp  main.lua  render.frag  render.vert
examples/21_volumetric_fog/: fog.comp  main.lua  render.frag  render.vert
examples/22_neural_regression/: main.lua  mlp.comp  render.frag  render.vert
examples/23_sa_tsp_massing/: anneal.comp  main.lua  route.vert
examples/24_neuro_audio/: audio.comp  main.lua  vis.frag  vis.vert
examples/25_voxel_atrium/: atrium.comp  main.lua  render.frag  render.vert
examples/26_mesh_cathedral/: cathedral.frag  cathedral.mesh  main.lua
examples/27_obj_viewer/: loader.lua  main.lua  obj.frag  obj.vert  voxelize.comp
examples/28_voxel_world/: main.lua  render.comp  world.comp
examples/29_magic_sandbox/: constants.lua  main.lua  physics.comp
examples/29_magic_sandbox/shaders/: common.glsl  physics_botany.glsl  physics_liquids.glsl  physics_motion.glsl  physics_weather.glsl  render.comp
examples/30_sponza_gltf/: loader.lua  main.lua
examples/30_sponza_gltf/shaders/: bloom_blur.comp  bloom_bright.comp  bloom_composite.comp  gbuffer.frag  gbuffer.vert  gi.comp  gi_blur.comp  lighting.comp  post.comp  shadow.frag  shadow.vert  ssao.comp  (+2 more)
examples/31_neuro_symbolic_mesh/: cost.glsl  main.lua  optimize.comp  render.frag  render.vert
examples/32_cellular_automata/: constants.lua  main.lua
examples/33_gpu_vrp/: main.lua  physics.comp  render.frag  render.vert
examples/34_optimal_transport/: main.lua  ot.comp  render.frag  render.vert
examples/35_ant_colony/: ant.comp  decay.comp  main.lua  render.frag  render.vert
examples/36_topology_opt/: field.comp  main.lua  render.frag  render.vert  update.comp
examples/37_admm_consensus/: admm.comp  main.lua  pattern.comp  render.frag
examples/38_job_shop_scheduling/: breed.comp  evaluate.comp  main.lua  render.frag  render.vert
examples/39_branch_and_bound/: evaluate.comp  main.lua  render.frag  render.vert
examples/40_particle_term/: main.lua  physics.comp  render.frag  render.vert  sdf.comp
examples/41_imgui_visualizer/: CMakeLists.txt  main.lua
examples/42_robot_visualizer/: ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md  UI_REVOLUTION.md  analyzer.lua  bridge.cpp  config.lua  decoder.lua  dump_tool.lua  indexer.lua  main.lua  parser.comp  playback.lua  point.frag  primitives.lua  types.lua  view_3d.lua
examples/42_robot_visualizer/shaders/: blur.comp  def_light.frag  def_light.vert  def_line.frag  def_line.vert  def_point.frag  def_point.vert  fp_line.frag  fp_line.vert  fp_point.frag  fp_point.vert  grid.frag  grid.vert  line.frag  line.vert  parser.comp  plot.frag  plot.vert  point.vert  sdf_gen.comp  text.frag  text.vert  ui.frag  ui.vert
examples/42_robot_visualizer/ui/: consts.lua  context.lua  harvester.lua  header.lua  icons.lua  inspector.lua  panels.lua  perf.lua  telemetry.lua  text_context.lua  theme.lua
examples/43_forward_plus/: main.lua
examples/44_bespoke_orchestrator/: CMakeLists.txt  GAMEPLAN.md  README.md  backend.lua  backend.py  bridge.cpp  clone_orchestrator.sh  launch.sh  main.lua  node_worker.lua  offsets_xp.txt  run_backend.sh
examples/44_bespoke_orchestrator/nodes/: agent.lua  buffer.lua  capture.lua  constant.lua  delay.lua  join.lua  terminal.lua  transform.lua  trigger.lua  vision.lua
examples/44_bespoke_orchestrator/shaders/: bg.vert
examples/45_neurosymbolic_lowpoly/: TODO.md  animator.lua  csg.lua  generator.lua  main.lua  mesher.lua  render.frag  render.vert  sdf.lua
examples/46_gaussian_splatting/: main.lua  project.comp  render.frag
examples/47_neurosymbolic_gaussian/: generator.comp  main.lua  render.vert
examples/48_neurosymbolic_ghost/: generator.comp  main.lua
examples/49_compute_splatter/: GENERATOR_LOG.md  binning.comp  binning_tiles.comp  generate.comp  global_sort.comp  hybrid.frag  hybrid.vert  identify_ranges.comp  main.lua  prefix_sum.comp  radix_histogram.comp  radix_scatter.comp  raster.comp  resolve.comp  splat.comp
examples/50_custom_renderer/: FEATURES.md  build_grid.comp  hash.comp  main.lua  render.comp  sort.comp
examples/my_new_agent/: backend.lua  launch.sh  main.lua  node_worker.lua  run_backend.sh  template_graph.json
src/: embedded_lua.h  main.cpp
src/lua/: init.lua
tools/: embed_lua.py  generate_bindings.py
(+87 files in other folders)
